# daesite

./: .commitlintrc.yml  .dockerignore  .gitattributes  .gitignore  .prettierrc.json  .yarnrc.yml  Cargo.toml  Dockerfile  lerna.json  makefile  package.json  readme.md  tsconfig.base.json
applications/accounts/: Dockerfile  db.json  middleware.ts  next.config.js  package.json  tsconfig.json  types.d.ts
applications/accounts/app/: global.scss  layout.tsx  not-found.scss  not-found.tsx  store.tsx
applications/accounts/app/[username]/: layout.tsx  page.tsx
applications/accounts/app/signin/: page.tsx
applications/accounts/components/EpicTitle/: EpicTitle.scss  EpicTitle.tsx  index.ts
applications/accounts/components/Header/: Header.scss  Header.tsx  index.ts
applications/accounts/components/StarsBackground/: StarsBackground.scss  StarsBackground.tsx  index.ts
applications/accounts/containers/Fullscreen/: Fullscreen.tsx  FullscreenBackground.scss  FullscreenBackground.tsx  index.ts
applications/accounts/middlewares/: auth.ts  avatar.ts  index.ts
applications/accounts/store/: createAppSlice.ts  hooks.ts  index.ts  store.ts
applications/dae/: .dockerignore  Dockerfile  db.json  index.html  next.config.js  package.json  tsconfig.json  vite.config.ts
applications/dae/app/: Home.scss  global.scss  layout.tsx  not-found.tsx  page.tsx
applications/dae/app/(Home)/: Home.scss  layout.tsx  page.tsx
applications/dae/components/EpicTitle/: EpicTitle.scss  EpicTitle.tsx  index.ts
applications/dae/components/Header/: Header.scss  Header.tsx  index.ts
applications/dae/components/Typewriter/: Typewriter.tsx  index.ts
applications/dae/containers/Fullscreen/: Fullscreen.scss  Fullscreen.tsx  FullscreenBackground.tsx  index.ts
applications/dae/containers/PageLayout/: PageLayout.tsx  index.ts
applications/dae/helpers/: index.ts  typeStringSequence.ts
applications/dae/src/: entry.client.tsx  routes.tsx
proto/: Dockerfile  identity.proto
services/gateway/: Cargo.toml  Dockerfile
services/identity/: Cargo.toml  Dockerfile  build.rs
services/identity/.sqlx/: query-04af10fce2f10b7038a173c679d9a3427877a2425660851c70fdc4c7249b436e.json  query-17f8ccbf3ea1bfa44ad7c20b6883bb8cdbfc16488281fa026c6a5ebbe3f33718.json  query-51e1a8bc0c2481f102b6c6216dd039f280d91bc8f8c8e924ca4b3b1ed4d30e72.json  query-57fceab728d353e83316aa90eeecdf6f57c51c0b5217d5fcd20684d0517aaa25.json  query-5ca9f4e4aed01d528234c451679da1f988db08eabba8748c3ea95da35f1bdc2f.json  query-7ec3b6e2a933ffc934c83ef4bb0a77add1b855d9bc31067e319dbba0c89ff6de.json  query-80894bfa8e1674beef008a2a8876dfa869de0e78ed223b2f862dc04ae30a582f.json  query-93a9c2e33a75ca3d661bb47442cf7f8edccc32397d039d3e482a50152bff1abd.json  query-b69a6f42965b3e7103fcbf46e39528466926789ff31e9ed2591bb175527ec169.json  query-c39357fecc855a4474cb3c4f5be4265746300c1f91b1e5de3ab72daaa3322b46.json  query-c7864f1844c5a6822c84ffca2d41e335429e3c20ea7334f4d74cf9eaf02fe3f0.json  query-d656a0f909dfb0020b6f6dd61efad01a426fe33bda4c166ed30305ff5ea407b3.json  query-d8e905f32688854877f7cbfadbeeb95a5236d38811c59bbf57ff6918a5e30c8a.json  query-de21d9fee19e4dcef1047fb9cf32ffd4755486a4829182b2010c1941f32ab096.json  query-de2f18e155947bd37822abcfc09071c14b0b2c63dd2192607653aa594ca73b60.json  query-e3101db617ff92888b1a302147d4b99f8575dd4c58667f1278078e8caa92014b.json  query-e9461945b5389f755af4623e68b052d682f3f830169f8f97b6ec7a11625f7e5a.json  query-eb48fc06ab1f8df80f5eb2ebec1cacf4c05d3c59e1e527de07beab44dcb18af5.json
services/identity/migrations/: 20240828113240_init.down.sql  20240828113240_init.up.sql  20240906174827_create_modulus_table.down.sql  20240906174827_create_modulus_table.up.sql  20240906204158_add_salt_and_verifier.down.sql  20240906204158_add_salt_and_verifier.up.sql
services/identity/src/: lib.rs  main.rs
services/identity/src/api/: error.rs  mod.rs  validator.rs
services/identity/src/api/dto/: mod.rs  modulus.rs  permission.rs  role.rs  user.rs
services/identity/src/api/grpc/: identity.rs
services/identity/src/api/proto/: .dockerignore  .gitignore  mod.rs
services/identity/src/domain/: error.rs  mod.rs
services/identity/src/domain/models/: avatar.rs  challenge.rs  id.rs  mod.rs  modulus.rs  permission.rs  role.rs  session.rs  token.rs  token_type.rs  user.rs
services/identity/src/domain/repositories/: avatar.rs  mod.rs  modulus.rs  repository.rs  role.rs  session.rs  user.rs
services/identity/src/domain/services/: auth.rs  captcha.rs  mod.rs  modulus.rs  role.rs  session.rs  user.rs
services/identity/src/domain/storages/: storage.rs  user.rs
services/identity/src/infrastructure/: error.rs  mod.rs
services/identity/src/infrastructure/connectors/: mod.rs  postgres.rs  s3.rs
services/identity/src/infrastructure/models/: mod.rs  modulus.rs  permission.rs  role.rs  session.rs  token_type.rs  user.rs
services/identity/src/infrastructure/repositories/: avatar.rs  mod.rs  modulus.rs  session.rs  user.rs
services/identity/src/infrastructure/services/: auth.rs  captcha.rs  mod.rs  user.rs
(+29 files in other folders)
