[package]
name = "identity"
description = "Identity and Access Management service"
authors = ["Dmitriy Chukhno <dmitr1sdadaya@protonmail.com>"]
version = "0.1.0"
edition = "2021"
license = "AGPL-3.0"

[[bin]]
path = "src/main.rs"
name = "identity"

[dependencies]
axum = { version = "0.7.5", features = ["http2", "json", "form", "multipart", "query", "ws", "macros"] }
axum-prometheus = "0.6.1"

# middleware + utils
tower-http = { version = "0.5.0", features = ["trace", "cors", "sensitive-headers", "fs", "compression-zstd", "compression-gzip", "compression-deflate", "compression-br"] }
tower = "0.4.13"

# tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# grpc
tonic = "0.11.0"
prost-types = "0.12.3"
prost = "0.12.3"

tokio = { version = "1.35.1", features = ["full"] }
tokio-stream = "0.1.14"

futures = "0.3.30"
async-trait = "0.1.75"

serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4.26", features = ["serde"] }

base64-url = "3.0.0"
id = { path = "../../packages/id-rs" }

validator = { version = "0.18.0", features = ["derive"] }
thiserror = "1.0.56"
regex = "1.8.4"

rust-s3 = "0.34.0"

jemallocator = "0.5.4"

[build-dependencies]
tonic-build = "0.11.0"
